--- a/calendar.html
+++ b/calendar.html
@@ -154,6 +154,27 @@
   </style>
 </head>
 <body>
+  <div class="navbar">
+        <div class="nav-links">
+            <button class="nav-button active">
+                <a href="index.html" class="text-decoration-home">Home</a>
+            </button>
+           
+                <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
+                <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
+                <a href="calendar.html" class="text-decoration-about"> <button class="nav-button">Calendar</button></a>
+                <a href="jobs.html" class="text-decoration-about"> <button class="nav-button">Jobs & All</button></a>
+            
+        </div>
+        <div class="nav-actions">
+            <button class="action-button">
+                <a href="login.html" class="text-decoration-login">Log-In</a>
+            </button>
+            <button class="action-button">
+                    <a href="signin.html" class="text-decoration-signin">Sign-In</a>
+            </button>
+        </div>
+    </div>  
   <div class="container">
     <!-- Calendar Section -->
     <div class="card">
