--- a/calendar.html
+++ b/calendar.html
@@ -7,6 +7,184 @@
     <title>Calendar & To-Do List</title>
    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <link rel="stylesheet" href="stylecalendar.css">
+    <style>
+    body {
+        font-family: Arial, sans-serif;
+        background: white;
+        color: black;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+    }
+
+    .navbar {
+        width: 100%;
+        background: linear-gradient(to right, #4a00e0, #8e2de2);
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 1rem;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .nav-button {
+        background: none;
+        border: none;
+        color: white;
+        font-size: 16px;
+        cursor: pointer;
+        padding: 0.5rem 1rem;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+    }
+
+    .nav-button:hover {
+        background-color: #8e2de2;
+    }
+
+    .nav-button.active {
+        background-color: #4a00e0;
+        font-weight: bold;
+    }
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 2rem;
+        width: 80%;
+        max-width: 1200px;
+        margin-top: 2rem;
+    }
+
+    .card {
+        background-color: #f3f3f3;
+        color: black;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        padding: 2rem;
+    }
+
+    .card h2 {
+        text-align: center;
+        font-size: 24px;
+        margin-bottom: 1rem;
+    }
+
+    /* Calendar Styles */
+    .calendar {
+        display: grid;
+        grid-template-columns: repeat(7, 1fr); /* Calendar ca matrice */
+        gap: 10px;
+        padding: 10px;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .calendar div {
+        padding: 15px;
+        text-align: center;
+        background-color: #ddd;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 18px;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+    }
+
+    .calendar div:hover {
+        background-color: #4a00e0;
+        color: white;
+        transform: scale(1.1);
+    }
+
+    .calendar div.selected {
+        background-color: #8e2de2;
+        color: white;
+        border: 2px solid #4a00e0;
+        font-weight: bold;
+    }
+
+    .selected-date {
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #4a00e0;
+        border-radius: 5px;
+        color: white;
+        text-align: center;
+    }
+
+    /* To-Do List Styles */
+    .todo-item {
+        background-color: #f3f3f3;
+        color: black;
+        padding: 10px;
+        margin: 8px 0;
+        border-radius: 5px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .todo-item button {
+        background-color: #ff1744;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        padding: 5px 10px;
+    }
+
+    .todo-item button:hover {
+        background-color: #f44336;
+    }
+
+    .input {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+        color: black;
+    }
+
+    .button {
+        background-color: #4a00e0;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
+    .button:hover {
+        background-color: #8e2de2;
+    }
+
+    .event-item {
+        background-color: #f3f3f3;
+        padding: 10px;
+        margin: 8px 0;
+        border-radius: 5px;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .event-item button {
+        background-color: #ff1744;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+        padding: 5px 10px;
+    }
+
+    .event-item button:hover {
+        background-color: #f44336;
+    }
+</style>
+
 </head>
 
 <body>
