--- a/calendar.html
+++ b/calendar.html
@@ -32,7 +32,7 @@
     .nav-button {
         background: none;
         border: none;
-        color: white;
+        color: black;
         font-size: 16px;
         cursor: pointer;
         padding: 0.5rem 1rem;
