--- a/cumparaturi.html
+++ b/cumparaturi.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <div class="nav-links">
             <button class="nav-button active">
-                <a href="home1.html" class="text-decoration-home">Home</a> </button>
+                <a href="index.html" class="text-decoration-home">Home</a> </button>
            
                 <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
                 <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
