--- a/signin.html
+++ b/signin.html
@@ -72,7 +72,7 @@
                         <option value="Timișoara">Timișoara</option>
 
     </select>
-    <input type="text" name="facultate" class="form-control" placeholder="What you study?" required>
+    <input type="text" name="facultate" class="form-control" placeholder="What do you study?" required>
     <button type="submit" class="btn btn-custom w-50">Create Account</button>
 </form>
 
